# projects_for_home_work

./: .gitignore  .travis.json  .travis.yml  .travis_script.sh  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  dir_000002_000001.html  dir_000004_000012.html  dir_000006_000018.html  dir_000008_000000.html  dir_000008_000020.html  dir_000010_000000.html  dir_000010_000018.html  dir_000011_000015.html  dir_000012_000000.html  dir_000012_000027.html  dir_000013_000001.html  dir_000014_000017.html  dir_000016_000015.html  dir_000016_000027.html  dir_000018_000021.html  dir_000019_000020.html  dir_000019_000022.html  dir_000020_000021.html  dir_000021_000022.html  dir_000022_000020.html  dir_000022_000023.html  dir_000023_000024.html  dir_000023_000025.html  dir_087a405cf7aeef73018909e2a95f2fdc.html  dir_087a405cf7aeef73018909e2a95f2fdc_dep.map  dir_087a405cf7aeef73018909e2a95f2fdc_dep.md5  dir_0c792d7761d9abbaf7bece6d00729008.html  dir_0c792d7761d9abbaf7bece6d00729008_dep.map  dir_0c792d7761d9abbaf7bece6d00729008_dep.md5  dir_29650e7215f53c7245ad7569299dcce3.html  dir_29650e7215f53c7245ad7569299dcce3_dep.map  (+149 more)
d0/d0a/: format_8h.html  format_8h_source.html
d0/d16/: classHW__05_1_1SHAPES_1_1Point__inherit__graph.map  classHW__05_1_1SHAPES_1_1Point__inherit__graph.md5
d0/d20/: shapes_8cpp__incl.map  shapes_8cpp__incl.md5
d0/d22/: namespaceHW__04_1_1PRINT.html
d0/d27/: classHW__05_1_1DATA__STORAGE_1_1svg__inherit__graph.map  classHW__05_1_1DATA__STORAGE_1_1svg__inherit__graph.md5
d0/d2f/: tuple_8h__incl.map  tuple_8h__incl.md5
d0/d3f/: namespaceHW__02.html
d0/d48/: matrix_8hpp__incl.map  matrix_8hpp__incl.md5
d0/d51/: classHW__05_1_1DATA__STORAGE_1_1svg-members.html
d0/d56/: dxf_8h.html  dxf_8h_source.html
d0/d5f/: hw__05_2README_8md.html
d0/d77/: classHW__05_1_1DATA__STORAGE_1_1cdr__coll__graph.md5
d0/d8b/: matrix__node_8hpp__dep__incl.map  matrix__node_8hpp__dep__incl.md5
d0/d9a/: classHW__05_1_1Document__Pool.html
d0/da3/: polygons_8h.html  polygons_8h_source.html
d0/da9/: classHW__05_1_1Polygon-members.html
d0/daf/: classHW__05_1_1Line__coll__graph.md5
d0/dc2/: canvas_8cpp.html
d0/dd3/: classHW__05_1_1Polygon__inherit__graph.md5
d0/dd8/: classHW__05_1_1SHAPES_1_1Rectangle__coll__graph.map  classHW__05_1_1SHAPES_1_1Rectangle__coll__graph.md5
d0/dd9/: classHW__05_1_1DATA__STORAGE_1_1vsd-members.html
d0/deb/: star_8h__dep__incl.map  star_8h__dep__incl.md5
d1/d0f/: format_8h__dep__incl.map  format_8h__dep__incl.md5
d1/d13/: structHW__06_1_1Matrix__Iterator-members.html
d1/d1f/: editor_8cpp.html
d1/d39/: shapes_8h.html  shapes_8h_source.html
d1/d3b/: iformat_8h.html  iformat_8h_source.html
d1/d4d/: structHW__02_1_1FILTER_1_1IP__Address__Sort__Any__coll__graph.map  structHW__02_1_1FILTER_1_1IP__Address__Sort__Any__coll__graph.md5
d1/d4e/: vsd_8cpp.html
d1/d65/: classHW__05_1_1SHAPES_1_1Line__inherit__graph.map  classHW__05_1_1SHAPES_1_1Line__inherit__graph.md5
d1/d6c/: docs_8h__incl.map  docs_8h__incl.md5
d1/d75/: hw__02_2src_2main_8cpp__incl.map  hw__02_2src_2main_8cpp__incl.md5
d1/d76/: structHW__02_1_1FILTER_1_1IP__Address__Sort__Any-members.html
d2/d20/: tuple_8h.html  (+1 more)
hw_01/: CMakeLists.txt  Doxyfile  README.md  version.h.in
hw_01/include/: library.h  version_library.h
hw_01/src/: library.cpp  library.h  main.cpp  test_main.cpp
hw_01/test/: test.cpp
hw_02/: CMakeLists.txt  Doxyfile  README.md
hw_02/include/: filter.h
hw_02/src/: library.cpp  library.h  main.cpp  version.h
hw_02/test/: filter.cpp  test.cpp
hw_03/: CMakeLists.txt  Doxyfile  README.md
hw_03/include/: allocator.h  container.h  memory_rebind.h
hw_03/src/: allocator.cpp  allocator.h  container.h  main.cpp  main.h  manager.cpp  manager.h  memory_rebind.h
hw_03/test/: test.cpp  test_allocator.cpp  test_container.cpp
hw_04/: CMakeLists.txt  Doxyfile  README.md
hw_04/include/: print.h  tuple.h
hw_04/src/: main.cpp  main.h
hw_04/test/: test.cpp
hw_05/: CMakeLists.txt  Doxyfile  README.md
hw_05/include/: editor.h  format.h
hw_05/include/document/: document.h
hw_05/include/document/elements/: elements.h
hw_05/include/document/elements/basics/: basics.h  circles.h  lines.h  polygons.h
hw_05/include/document/format/: cdr.h  dxf.h  file_extension.h  format.h  svg.h  vsd.h
hw_05/src/: editor.cpp  editor.h  main.cpp  test.cpp
hw_05/src/docs/: canvas.h  docs.cpp  docs.h
hw_05/src/docs/canvas/: canvas.cpp  canvas.h  loader.h
hw_05/src/docs/canvas/data/: data_link.cpp  data_link.h  database.cpp  database.h  file.cpp  file.h  istore.h
hw_05/src/docs/canvas/data/format/: cdr.cpp  cdr.h  dxf.cpp  dxf.h  iformat.h  svg.cpp  svg.h  vsd.cpp  vsd.h
hw_05/src/docs/canvas/shapes/: shapes.cpp  shapes.h
hw_05/src/docs/canvas/shapes/elements/: circles.cpp  circles.h  ishape.h  lines.cpp  lines.h  pentagon.cpp  pentagon.h  points.cpp  points.h  polygons.cpp  polygons.h  star.cpp  star.h
hw_05/src/docs/data/: file.cpp  file.h
hw_05/src/docs/data/format/: cdr.cpp  cdr.h  dxf.cpp  dxf.h  ifile.h  svg.cpp  svg.h  vsd.cpp  vsd.h
hw_05/src/docs/shapes/: shapes.cpp  shapes.h
hw_05/src/docs/shapes/elements/: circles.h  lines.h  points.h  polygons.cpp  polygons.h
hw_06/: CMakeLists.txt  Doxyfile  README.md
hw_07/: CMakeLists.txt  Doxyfile  README.md
hw_07/include/: bulk.h  bulk.hpp  parser.h  parser.hpp
hw_07/include/output/: console_log.h  console_log.hpp  file_log.h  file_log.hpp  log.h  log.hpp
hw_07/src/: bulk.cpp  main.cpp  parser.cpp
hw_07/src/output/: console_log.cpp  file_log.cpp
hw_07/test/: test.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+46 more)
(+535 files in other folders)
